# vulkan_game

./: .gitignore  Cargo.toml  build.rs
engine/: Cargo.toml  build.rs  camera.rs  font.rs  lib.rs  mesh.rs  object2d.rs  renderer.rs  text.rs  ui_element.rs
engine/examples/: ecs.rs  gltf.rs  instancing.rs  refactor.rs  scene_graph.rs  simple.rs  text.rs
engine/geometry/: mod.rs  plane.rs  text.rs  triangle.rs
engine/geometry2d/: text.rs
engine/geometry3d/: box.rs  plane.rs  triangle.rs
engine/lights/: ambient_light.rs
engine/math/: matrix3.rs  mod.rs  quaternion.rs  vector2.rs  vector3.rs
engine/shaders/: basic.vert  text.frag  text.vert
engine/src/: camera.rs  empty.rs  entity.rs  entity_manager.rs  font.rs  geometry3d.rs  graph.rs  input.rs  lib.rs  mesh.rs  object2d.rs  pool.rs  scene.rs  state.rs  text.rs  transform2d.rs  transform3d.rs  ui_element.rs
engine/utilities/: Cargo.toml
engine/vulkan/: buffer.rs  context.rs  renderer.rs
examples/: simple.rs
game/: Cargo.toml  arial.fdf  bin.rs  camera_controller.rs  consolas.fdf  main.rs
game/res/: monkey.gltf
game/src/: camera_controller.rs  game.rs  main.rs  state_manager.rs
sdf_gen/: atlas.rs  field.rs  main.rs
src/: camera.rs  geometry.rs  lib.rs  main.rs  mesh.rs  object3d.rs  renderer.rs  util.rs
src/engine/: camera.rs  lib.rs
src/geometry/: box.rs  mod.rs  plane.rs  triangle.rs
src/lights/: ambient_light.rs  mod.rs  point_light.rs
src/math/: euler.rs  matrix4.rs  mod.rs  quaternion.rs  vector2.rs  vector3.rs
src/renderer/: mod.rs  vulkan.rs
src/shaders/: basic.vert  (+2 more)
(+79 files in other folders)
