[package]
name = "vulkan_game"
version = "0.1.0"
authors = ["Kyle Burke <kyle.n.burke@gmail.com>"]
edition = "2018"
default-run = "game"

[lib]
name = "engine"
path = "engine/lib.rs"

[[bin]]
name = "sdf_gen"
path = "sdf_gen/main.rs"

[[bin]]
name = "game"
path = "game/main.rs"

[dependencies]
ash = "0.31.0"

[dependencies.glfw]
version = "0.34.0"
features = ["vulkan"]